--- a/src/spacing/_variables.scss
+++ b/src/spacing/_variables.scss
@@ -1,5 +1,7 @@
-$sz-xs: 4px;
-$sz-sm: 8px;
-$sz-md: 16px;
-$sz-lg: 32px;
-$sz-xlg: 64px;
+:root {
+	--sz-xs: 4px;
+	--sz-sm: 8px;
+	--sz-md: 16px;
+	--sz-lg: 32px;
+	--sz-xlg: 64px;
+}
