make batch changes

--- a/src/spacing/_variables.scss
+++ b/src/spacing/_variables.scss
@@ -1,7 +1,5 @@
-:root {
-	--sz-xs: 4px;
-	--sz-sm: 8px;
-	--sz-md: 16px;
-	--sz-lg: 32px;
-	--sz-xlg: 64px;
-}
+$sizeXs: 4px;
+$sizeSm: 8px;
+$sizeMd: 16px;
+$sizeLg: 32px;
+$sizeXLg: 64px;
