--- a/src/components/Card/all.scss
+++ b/src/components/Card/all.scss
@@ -1,4 +1,4 @@
-@import url('./index.scss');
+@import url('./card.scss');
 @import url('./card-actions.scss');
 @import url('./card-action-button.scss');
 @import url('./card-content.scss');
