--- a/src/colors/_variable.scss
+++ b/src/colors/_variable.scss
@@ -10,6 +10,15 @@
     --bg-viridianGreen: #0FA3B1;
     --bg-isabeline: #F9F7F3;
     --bg-englishRed: #AF3E4D;
+    --bg-primary: #626ED4;
+    --bg-secondary : #343549;
+    --bg-success: #2AA39A;
+    --bg-danger: #EC4561;
+    --bg-warning: #F8B425;
+    --bg-info: #38A5F8;
+    --bg-light: #f8f8fa;
+    --bg-dark: #575c62;
+    --bg-muted: #EDECF1;
 
     --clr-bittersweet: #FF6F59;
     --clr-darkSlateGray: #254441;
@@ -22,4 +31,13 @@
     --clr-viridianGreen: #0FA3B1;
     --clr-isabeline: #F9F7F3;
     --clr-englishRed: #AF3E4D;
+    --clr-primary: #626ED4;
+    --clr-secondary : #343549;
+    --clr-success: #2AA39A;
+    --clr-danger: #EC4561;
+    --clr-warning: #F8B425;
+    --clr-info: #38A5F8;
+    --clr-light: #f8f8fa;
+    --clr-dark: #575c62;
+    --clr-muted: #EDECF1;
 }
