--- a/src/colors/colors.scss
+++ b/src/colors/colors.scss
@@ -47,3 +47,48 @@
 .color-englishRed {
     color: var(--bg-englishRed);
 }
+
+.clr-primary,
+.color-primary {
+    color: var(--bg-primary);
+}
+
+.clr-secondary,
+.color-secondary {
+    color: var(--bg-secondary);
+}
+
+.clr-success,
+.background-success {
+    color: var(--bg-success);
+}
+
+.clr-danger,
+.background-danger {
+    color: var(--bg-danger);
+}
+
+.clr-warning,
+.color-warning {
+    color: var(--bg-warning);
+}
+
+.clr-info,
+.color-info {
+    color: var(--bg-info);
+}
+
+.clr-light,
+.color-light {
+    color: var(--bg-light);
+}
+
+.clr-dark,
+.color-dark {
+    color: var(--bg-dark);
+}
+
+.clr-muted,
+.color-muted {
+    color: var(--bg-muted);
+}
