--- a/src/colors/backgrounds.scss
+++ b/src/colors/backgrounds.scss
@@ -47,3 +47,48 @@
 .background-englishRed {
     background: var(--bg-englishRed);
 }
+
+.bg-primary,
+.background-primary {
+    background: var(--bg-primary);
+}
+
+.bg-secondary,
+.background-secondary {
+    background: var(--bg-secondary);
+}
+
+.bg-success,
+.background-success {
+    background: var(--bg-success);
+}
+
+.bg-danger,
+.background-danger {
+    background: var(--bg-danger);
+}
+
+.bg-warning,
+.background-warning {
+    background: var(--bg-warning);
+}
+
+.bg-info,
+.background-info {
+    background: var(--bg-info);
+}
+
+.bg-light,
+.background-light {
+    background: var(--bg-light);
+}
+
+.bg-dark,
+.background-dark {
+    background: var(--bg-dark);
+}
+
+.bg-muted,
+.background-muted {
+    background: var(--bg-muted);
+}
