use SASS variables

--- a/src/colors/backgrounds.scss
+++ b/src/colors/backgrounds.scss
@@ -1,94 +1,94 @@
 .bg-bittersweet,
 .background-bittersweet {
-    background: var(--bg-bittersweet);
+	background: $color-bittersweet;
 }
 
-.bg-darkSlateGray,
-.background-darkSlateGray {
-    background: var(--bg-darkSlateGray);
+.bg-dark-slate-gray,
+.background-dark-slate-gray {
+	background: $color-dark-slate-gray;
 }
 
 .bg-zomp,
 .background-zomp {
-    background: var(--bg-zomp);
+	background: $color-zomp;
 }
 
 .bg-sage,
 .background-sage {
-    background: var(--bg-sage);
+	background: $color-sage;
 }
 
-.bg-romanSliver,
-.background-romanSliver {
-    background: var(--bg-romanSliver);
+.bg-roman-sliver,
+.background-roman-sliver {
+	background: $color-roman-sliver;
 }
 
 .bg-oldmauve,
-.background-oldmauve {
-    background: var(--bg-oldmauve);
+.background-old-mauve {
+	background: $color-old-mauve;
 }
 
 .bg-emerald,
 .background-emerald {
-    background: var(--bg-bg-emerald);
+	background: $color-emerald;
 }
 
-.bg-viridianGreen,
-.background-viridianGreen {
-    background: var(--bg-viridianGreen);
+.bg-viridian-green,
+.background-viridian-green {
+	background: $color-viridian-green;
 }
 
 .bg-isabeline,
 .background-isabeline {
-    background: var(--bg-isabeline);
+	background: $color-isabeline;
 }
 
-.bg-englishRed,
-.background-englishRed {
-    background: var(--bg-englishRed);
+.bg-english-red,
+.background-english-red {
+	background: $color-english-red;
 }
 
 .bg-primary,
 .background-primary {
-    background: var(--bg-primary);
+	background: $color-primary;
 }
 
 .bg-secondary,
 .background-secondary {
-    background: var(--bg-secondary);
+	background: $color-secondary;
 }
 
 .bg-success,
 .background-success {
-    background: var(--bg-success);
+	background: $color-success;
 }
 
 .bg-danger,
 .background-danger {
-    background: var(--bg-danger);
+	background: $color-danger;
 }
 
 .bg-warning,
 .background-warning {
-    background: var(--bg-warning);
+	background: $color-warning;
 }
 
 .bg-info,
 .background-info {
-    background: var(--bg-info);
+	background: $color-info;
 }
 
 .bg-light,
 .background-light {
-    background: var(--bg-light);
+	background: $color-light;
 }
 
 .bg-dark,
 .background-dark {
-    background: var(--bg-dark);
+	background: $color-dark;
 }
 
 .bg-muted,
 .background-muted {
-    background: var(--bg-muted);
+	background: $color-muted;
 }
