--- a/src/colors/colors.scss
+++ b/src/colors/colors.scss
@@ -1,94 +1,94 @@
 .clr-bittersweet,
 .color-bittersweet {
-    color: var(--bg-bittersweet);
+	color: $color-bittersweet;
 }
 
-.clr-darkSlateGray,
-.color-darkSlateGray {
-    color: var(--bg-darkSlateGray);
+.clr-dark-slate-gray,
+.color-dark-slate-gray {
+	color: $color-dark-slate-gray;
 }
 
 .clr-zomp,
 .color-zomp {
-    color: var(--bg-zomp);
+	color: $color-zomp;
 }
 
 .clr-sage,
 .color-sage {
-    color: var(--bg-sage);
+	color: $color-sage;
 }
 
-.clr-romanSliver,
-.color-romanSliver {
-    color: var(--bg-romanSliver);
+.clr-roman-sliver,
+.color-roman-sliver {
+	color: $color-roman-sliver;
 }
 
 .clr-oldmauve,
-.color-oldmauve {
-    color: var(--bg-oldmauve);
+.color-old-mauve {
+	color: $color-old-mauve;
 }
 
 .clr-emerald,
 .color-emerald {
-    color: var(--bg-bg-emerald);
+	color: $color-emerald;
 }
 
-.clr-viridianGreen,
-.color-viridianGreen {
-    color: var(--bg-viridianGreen);
+.clr-viridian-green,
+.color-viridian-green {
+	color: $color-viridian-green;
 }
 
 .clr-isabeline,
 .color-isabeline {
-    color: var(--bg-isabeline);
+	color: $color-isabeline;
 }
 
-.clr-englishRed,
-.color-englishRed {
-    color: var(--bg-englishRed);
+.clr-english-red,
+.color-english-red {
+	color: $color-english-red;
 }
 
 .clr-primary,
 .color-primary {
-    color: var(--bg-primary);
+	color: $color-primary;
 }
 
 .clr-secondary,
 .color-secondary {
-    color: var(--bg-secondary);
+	color: $color-secondary;
 }
 
 .clr-success,
-.background-success {
-    color: var(--bg-success);
+.color-success {
+	color: $color-success;
 }
 
 .clr-danger,
-.background-danger {
-    color: var(--bg-danger);
+.color-danger {
+	color: $color-danger;
 }
 
 .clr-warning,
 .color-warning {
-    color: var(--bg-warning);
+	color: $color-warning;
 }
 
 .clr-info,
 .color-info {
-    color: var(--bg-info);
+	color: $color-info;
 }
 
 .clr-light,
 .color-light {
-    color: var(--bg-light);
+	color: $color-light;
 }
 
 .clr-dark,
 .color-dark {
-    color: var(--bg-dark);
+	color: $color-dark;
 }
 
 .clr-muted,
 .color-muted {
-    color: var(--bg-muted);
+	color: $color-muted;
 }
