--- a/src/colors/backgrounds.scss
+++ b/src/colors/backgrounds.scss
@@ -1,94 +1,124 @@
+.bg-red,
+.background-red {
+	background-color: $color-red;
+}
+
+.bg-green,
+.background-green {
+	background-color: $color-green;
+}
+
+.bg-blue,
+.background-blue {
+	background-color: $color-blue;
+}
+
+.bg-orange-yellow,
+.background-orange-yellow {
+	background-color: $color-orange-yellow;
+}
+
+.bg-lemon-glacier,
+.background-lemon-glacier {
+	background-color: $color-lemon-glacier;
+}
+
+.bg-red-munsel,
+.background-red-munsel {
+	background-color: $color-red-munsell;
+}
+
 .bg-bittersweet,
 .background-bittersweet {
-	background: $color-bittersweet;
+	background-color: $color-bittersweet;
 }
 
 .bg-dark-slate-gray,
 .background-dark-slate-gray {
-	background: $color-dark-slate-gray;
+	background-color: $color-dark-slate-gray;
 }
 
 .bg-zomp,
 .background-zomp {
-	background: $color-zomp;
+	background-color: $color-zomp;
 }
 
 .bg-sage,
 .background-sage {
-	background: $color-sage;
+	background-color: $color-sage;
 }
 
 .bg-roman-sliver,
 .background-roman-sliver {
-	background: $color-roman-sliver;
+	background-color: $color-roman-sliver;
 }
 
 .bg-oldmauve,
 .background-old-mauve {
-	background: $color-old-mauve;
+	background-color: $color-old-mauve;
 }
 
 .bg-emerald,
 .background-emerald {
-	background: $color-emerald;
+	background-color: $color-emerald;
 }
 
 .bg-viridian-green,
 .background-viridian-green {
-	background: $color-viridian-green;
+	background-color: $color-viridian-green;
 }
 
 .bg-isabeline,
 .background-isabeline {
-	background: $color-isabeline;
+	background-color: $color-isabeline;
 }
 
 .bg-english-red,
 .background-english-red {
-	background: $color-english-red;
+	background-color: $color-english-red;
 }
 
 .bg-primary,
 .background-primary {
-	background: $color-primary;
+	background-color: $color-primary;
 }
 
 .bg-secondary,
 .background-secondary {
-	background: $color-secondary;
+	background-color: $color-secondary;
 }
 
 .bg-success,
 .background-success {
-	background: $color-success;
+	background-color: $color-success;
 }
 
 .bg-danger,
 .background-danger {
-	background: $color-danger;
+	background-color: $color-danger;
 }
 
 .bg-warning,
 .background-warning {
-	background: $color-warning;
+	background-color: $color-warning;
 }
 
 .bg-info,
 .background-info {
-	background: $color-info;
+	background-color: $color-info;
 }
 
 .bg-light,
 .background-light {
-	background: $color-light;
+	background-color: $color-light;
 }
 
 .bg-dark,
 .background-dark {
-	background: $color-dark;
+	background-color: $color-dark;
 }
 
 .bg-muted,
 .background-muted {
-	background: $color-muted;
+	background-color: $color-muted;
 }
