--- a/src/colors/colors.scss
+++ b/src/colors/colors.scss
@@ -1,3 +1,33 @@
+.clr-red,
+.color-red {
+	color: $color-red;
+}
+
+.clr-green,
+.color-green {
+	color: $color-green;
+}
+
+.clr-blue,
+.color-blue {
+	color: $color-blue;
+}
+
+.clr-orange-yellow,
+.color-orange-yellow {
+	color: $color-orange-yellow;
+}
+
+.clr-lemon-glacier,
+.color-lemon-glacier {
+	color: $color-lemon-glacier;
+}
+
+.clr-red-munsel,
+.color-red-munsel {
+	color: $color-red-munsell;
+}
+
 .clr-bittersweet,
 .color-bittersweet {
 	color: $color-bittersweet;
