--- a/src/_variables/colors.scss
+++ b/src/_variables/colors.scss
@@ -1,3 +1,9 @@
+$color-red: #ff0000;
+$color-green: #00ff00;
+$color-blue: #0000ff;
+$color-orange-yellow: #ecb10d;
+$color-lemon-glacier: #ffff00;
+$color-red-munsell: #ff0044;
 $color-bittersweet: #ff6f59;
 $color-dark-slate-gray: #254441;
 $color-zomp: #43aa8b;
