--- a/src/colors/backgrounds.scss
+++ b/src/colors/backgrounds.scss
@@ -122,3 +122,88 @@
 .background-muted {
 	background-color: $color-muted;
 }
+
+.bg-pink,
+.background-pink {
+	background-color: $color-pink;
+}
+
+.bg-purple,
+.background-purple {
+	background-color: $color-purple;
+}
+
+.bg-deep-purple,
+.background-deep-purple {
+	background-color: $color-deep-purple;
+}
+
+.bg-indigo,
+.background-indigo {
+	background-color: $color-indigo;
+}
+
+.bg-light-blue,
+.background-light-blue {
+	background-color: $color-light-blue;
+}
+
+.bg-light-blue,
+.background-light-blue {
+	background-color: $color-light-blue;
+}
+
+.bg-cyan,
+.background-cyan {
+	background-color: $color-cyan;
+}
+
+.bg-teal,
+.background-teal {
+	background-color: $color-teal;
+}
+
+.bg-light-green,
+.background-light-green {
+	background-color: $color-light-green;
+}
+
+.bg-lime,
+.background-lime {
+	background-color: $color-lime;
+}
+
+.bg-yellow,
+.background-yellow {
+	background-color: $color-yellow;
+}
+
+.bg-amber,
+.background-amber {
+	background-color: $color-amber;
+}
+
+.bg-muted,
+.background-muted {
+	background-color: $color-orange;
+}
+
+.bg-deep-orange,
+.background-deep-orange {
+	background-color: $color-deep-orange;
+}
+
+.bg-brown,
+.background-brown {
+	background-color: $color-brown;
+}
+
+.bg-grey,
+.background-grey {
+	background-color: $color-grey;
+}
+
+.bg-blue-grey,
+.background-blue-grey {
+	background-color: $color-blue-grey;
+}
