--- a/src/_variables/colors.scss
+++ b/src/_variables/colors.scss
@@ -1,6 +1,6 @@
-$color-red: #ff0000;
-$color-green: #00ff00;
-$color-blue: #0000ff;
+$color-red: #f44336;
+$color-green: #4caf50;
+$color-blue: #2196f3;
 $color-orange-yellow: #ecb10d;
 $color-lemon-glacier: #ffff00;
 $color-red-munsell: #ff0044;
@@ -24,3 +24,19 @@ $color-info: #38a5f8;
 $color-light: #f8f8fa;
 $color-dark: #575c62;
 $color-muted: #edecf1;
+$color-pink: #e91e63;
+$color-purple: #9c27b0;
+$color-deep-purple: #673ab7;
+$color-indigo:#3f51b5;
+$color-light-blue: #03a9f4;
+$color-cyan: #00bcd4;
+$color-teal: #009688;
+$color-light-green: #8bc34a; 
+$color-lime: #cddc39;
+$color-yellow:#ffeb3b;
+$color-amber: #ffc107;
+$color-orange: #ff9800;
+$color-deep-orange: #ff5722;
+$color-brown: #795548;
+$color-grey: #9e9e9e;
+$color-blue-grey: #607d8b;
