--- a/src/colors/colors.scss
+++ b/src/colors/colors.scss
@@ -13,81 +13,6 @@
 	color: $color-blue;
 }
 
-.clr-orange-yellow,
-.color-orange-yellow {
-	color: $color-orange-yellow;
-}
-
-.clr-lemon-glacier,
-.color-lemon-glacier {
-	color: $color-lemon-glacier;
-}
-
-.clr-red-munsel,
-.color-red-munsel {
-	color: $color-red-munsell;
-}
-
-.clr-bittersweet,
-.color-bittersweet {
-	color: $color-bittersweet;
-}
-
-.clr-dark-slate-gray,
-.color-dark-slate-gray {
-	color: $color-dark-slate-gray;
-}
-
-.clr-zomp,
-.color-zomp {
-	color: $color-zomp;
-}
-
-.clr-sage,
-.color-sage {
-	color: $color-sage;
-}
-
-.clr-roman-sliver,
-.color-roman-sliver {
-	color: $color-roman-sliver;
-}
-
-.clr-oldmauve,
-.color-old-mauve {
-	color: $color-old-mauve;
-}
-
-.clr-emerald,
-.color-emerald {
-	color: $color-emerald;
-}
-
-.clr-viridian-green,
-.color-viridian-green {
-	color: $color-viridian-green;
-}
-
-.clr-isabeline,
-.color-isabeline {
-	color: $color-isabeline;
-}
-
-.clr-english-red,
-.color-english-red {
-	color: $color-english-red;
-}
-
-.clr-primary,
-.color-primary {
-	color: $color-primary;
-}
-
-.clr-secondary,
-.color-secondary {
-	color: $color-secondary;
-}
-
 .clr-success,
 .color-success {
 	color: $color-success;
@@ -118,7 +43,82 @@
 	color: $color-dark;
 }
 
-.clr-muted,
-.color-muted {
-	color: $color-muted;
+.clr-pink,
+.color-pink {
+	color: $color-pink;
+}
+
+.clr-purple,
+.color-purple {
+	color: $color-purple;
+}
+
+.clr-deep-purple,
+.color-deep-purple {
+	color: $color-deep-purple;
+}
+
+.clr-indigo,
+.color-indigo {
+	color: $color-indigo;
+}
+
+.clr-light-blue,
+.color-light-blue {
+	color: $color-light-blue;
+}
+
+.clr-light-blue,
+.color-light-blue {
+	color: $color-light-blue;
+}
+
+.clr-cyan,
+.color-cyan {
+	color: $color-cyan;
+}
+
+.clr-teal,
+.color-teal {
+	color: $color-teal;
+}
+
+.clr-light-green,
+.color-light-green {
+	color: $color-light-green;
+}
+
+.clr-lime,
+.color-lime {
+	color: $color-lime;
+}
+
+.clr-yellow,
+.color-yellow {
+	color: $color-yellow;
+}
+
+.clr-amber,
+.color-amber {
+	color: $color-amber;
+}
+
+.clr-deep-orange,
+.color-deep-orange {
+	color: $color-deep-orange;
+}
+
+.clr-brown,
+.color-brown {
+	color: $color-brown;
+}
+
+.clr-grey,
+.color-grey {
+	color: $color-grey;
+}
+
+.clr-blue-grey,
+.color-blue-grey {
+	color: $color-blue-grey;
 }
