--- a/src/colors/backgrounds.scss
+++ b/src/colors/backgrounds.scss
@@ -118,7 +118,12 @@
 	background-color: $color-grey;
 }
 
-.bg-blue-grey,
-.background-blue-grey {
-	background-color: $color-blue-grey;
+.bg-black,
+.background-black {
+	background-color: $color-black;
+}
+
+.bg-white,
+.background-white {
+	background-color: $color-white;
 }
