--- a/src/_variables/colors.scss
+++ b/src/_variables/colors.scss
@@ -23,3 +23,5 @@ $color-deep-orange: #ff5722;
 $color-brown: #795548;
 $color-grey: #9e9e9e;
 $color-blue-grey: #607d8b;
+$color-black: #000;
+$color-white: #fff;
