--- a/src/_variables/shadows.scss
+++ b/src/_variables/shadows.scss
@@ -4,3 +4,4 @@ $shadow-2: 4px 8px 16px 0px rgba(160, 160, 160, 0.8);
 $shadow-3: 8px 16px 32px 0px rgba(160, 160, 160, 0.8);
 $shadow-4: 16px 32px 64px 0px rgba(160, 160, 160, 0.8);
 $shadow-5: 32px 64px 128px 0px rgba(160, 160, 160, 0.8);
+$shadow-6: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0px 0 1px rgba(10, 10, 10, 0.02);
