Added some features

--- a/src/_variables/colors.scss
+++ b/src/_variables/colors.scss
@@ -16,7 +16,7 @@ $color-cyan: #00bcd4;
 $color-teal: #009688;
 $color-light-green: #8bc34a;
 $color-lime: #cddc39;
-$color-yellow: #ffeb3b;
+$color-yellow: #FFFC00;
 $color-amber: #ffc107;
 $color-orange: #ff9800;
 $color-deep-orange: #ff5722;
@@ -25,3 +25,13 @@ $color-grey: #9e9e9e;
 $color-blue-grey: #607d8b;
 $color-black: #000;
 $color-white: #fff;
+$color-roman-silver: #838996;
+$color-viridian-green: #40826D;
+$color-emerald: #50C878;
+$color-english-red: #ab4b52;
+$color-lemon-glacier: #fdff00;
+$color-sage: #BCB88A;
+$color-bittersweet: #fe6f5e;
+$color-isabeline: #f4f0ec;
+$color-dark-slate-gray: #2f4f4f;
+$color-red-munsel: #f2003c;
