--- a/src/colors/backgrounds.scss
+++ b/src/colors/backgrounds.scss
@@ -3,6 +3,56 @@
 	background-color: $color-red;
 }
 
+.bg-roman-silver,
+.background-roman-silver {
+	background-color: $color-roman-silver;
+}
+
+.bg-viridian-green,
+.background-viridian-green {
+	background-color: $color-viridian-green;
+}
+
+.bg-emerald,
+.background-emerald {
+	background-color: $color-emerald;
+}
+
+.bg-english-red,
+.background-english-red {
+	background-color: $color-english-red;
+}
+
+.bg-lemon-glacier,
+.background-lemon-glacier {
+	background-color: $color-lemon-glacier;
+}
+
+.bg-sage,
+.background-sage {
+	background-color: $color-sage;
+}
+
+.bg-bittersweet,
+.background-bittersweet {
+	background-color: $color-bittersweet;
+}
+
+.bg-isabeline,
+.background-isabeline {
+	background-color: $color-isabeline;
+}
+
+.bg-dark-slate-gray,
+.background-dark-slate-gray {
+	background-color: $color-dark-slate-gray;
+}
+
+.bg-red-munsel,
+.background-red-munsel {
+	background-color: $color-red-munsel;
+}
+
 .bg-green,
 .background-green {
 	background-color: $color-green;
@@ -103,6 +153,11 @@
 	background-color: $color-amber;
 }
 
+.bg-orange,
+.background-orange {
+	background-color: $color-orange;
+}
+
 .bg-deep-orange,
 .background-deep-orange {
 	background-color: $color-deep-orange;
@@ -116,6 +171,11 @@
 .bg-grey,
 .background-grey {
 	background-color: $color-grey;
+}
+
+.bg-blue-grey,
+.background-blue-grey {
+	background-color: $color-blue-grey;
 }
 
 .bg-black,
