--- a/src/colors/colors.scss
+++ b/src/colors/colors.scss
@@ -3,6 +3,56 @@
 	color: $color-red;
 }
 
+.clr-roman-silver,
+.color-roman-silver {
+	color: $color-roman-silver;
+}
+
+.clr-viridian-green,
+.color-viridian-green {
+	color: $color-viridian-green;
+}
+
+.clr-emerald,
+.color-emerald {
+	color: $color-emerald;
+}
+
+.clr-english-red,
+.color-english-red {
+	color: $color-english-red;
+}
+
+.clr-lemon-glacier,
+.color-lemon-glacier {
+	color: $color-lemon-glacier;
+}
+
+.clr-sage,
+.color-sage {
+	color: $color-sage;
+}
+
+.clr-bittersweet,
+.color-bittersweet {
+	color: $color-bittersweet;
+}
+
+.clr-isabeline,
+.color-isabeline {
+	color: $color-isabeline;
+}
+
+.clr-dark-slate-gray,
+.color-dark-slate-gray {
+	color: $color-dark-slate-gray;
+}
+
+.clr-red-munsel,
+.color-red-munsel {
+	color: $color-red-munsel;
+}
+
 .clr-green,
 .color-green {
 	color: $color-green;
