--- a/src/components/card-header.scss
+++ b/src/components/card-header.scss
@@ -1,6 +1,6 @@
 .card-header {
     text-align: center;
     font-size: $sizeMd;
-    font-family: $header-text;
+    font-family: $is-segoe-ui;
     font-weight: bold;
 }
