--- a/src/components/card.scss
+++ b/src/components/card.scss
@@ -1,8 +1,7 @@
 .card {
     box-shadow: $shadow-0;
-    min-width: 300px;
     cursor: pointer;
-    font-family: $base-text;
+    font-family: $is-segoe-ui;
     border-radius: $sizeSm;
     padding-bottom: $sizeSm;
     margin: $sizeSm;
