--- a/src/components/card-content.scss
+++ b/src/components/card-content.scss
@@ -2,4 +2,8 @@
     word-wrap: break-word;
     padding-left: $sizeSm;
     padding-right: $sizeSm;
+    max-height: 350px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
